<resources>
    <string name="app_name">Mental Health Companion</string>

    <string name="default_web_client_id">579885620078-m9bfdft3kkmpjqir8srni1nlv5ohrmne.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="affirmation">Affirmations</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="mediation">Meditations</string>
    <string name="chatbot">Chatbot</string>
    <string name="more">More</string>
    <string name="favorite_affirmations">Favorite Affirmations</string>
    <string name="favorite_meditations">Favorite Meditations</string>
    <string name="basic_info_settings">Basic Info. Settings</string>
    <string name="affirmation_settings">Affirmation Settings</string>
    <string name="meditation_settings">Meditation Settings</string>
    <string name="app_settings">App Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="personal_info_settings">Personal Info. Settings</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="anxious">Anxious</string>
    <string name="stressed">Stressed</string>
    <string name="calm">Calm</string>
    <string name="tired">Tired</string>
    <string name="self_love">Self-Love</string>
    <string name="confidence">Confidence</string>
    <string name="productivity">Productivity</string>
    <string name="gratitude">Gratitude</string>
    <string name="daily">Daily</string>
    <string name="a_few_times_a_week">A few times a week</string>
    <string name="once_a_week">Once a week</string>
    <string name="rarely_or_never">Rarely or never</string>
    <string name="motivation">Motivation</string>
    <string name="relaxation">Relaxation</string>
    <string name="self_esteem">Self-Esteem</string>
    <string name="positivity">Positivity</string>
    <string name="short_and_simple">Short and Simple</string>
    <string name="detailed">Detailed</string>
    <string name="story_like">Story-Like</string>
    <string name="dailyAffirmation">Daily</string>
    <string name="weeklyAffirmation">Weekly</string>
    <string name="monthlyAffirmation">Monthly</string>
    <string name="dailyMeditate">Daily</string>
    <string name="twice_a_day_meditate">Twice a Day</string>
    <string name="weeklyMeditate">Weekly</string>
    <string name="neverMeditate">Never</string>
    <string name="stress_relief">Stress Relief</string>
    <string name="anxiety_reduction">Anxiety Reduction</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="emotional_balance">Emotional Balance</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="_5_minutes">5 Minutes</string>
    <string name="_10_minutes">10 Minutes</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="_20_minutes">20 Minutes</string>
    <string name="guided_meditation">Guided Meditation</string>
    <string name="breathing_exercises">Breathing Exercises</string>
    <string name="body_scan_meditation">Body Scan Meditation</string>
    <string name="loving_kindness_meditation">Loving Kindness Meditation</string>
    <string name="logout">Logout</string>
    <string name="community">Community Forum</string>
    <string name="create">Create</string>
    <string name="notifications">Notifications</string>
    <string name="posts">Posts</string>
    <string name="therapy_session_with_ai">AI Therapist</string>
    <string name="therapy_session_history">Therapy Session History</string>
    <string name="nature_amp_environment"><![CDATA[Nature & Environment]]></string>
    <string name="nature_amp_environment_settings"><![CDATA[Nature & Environment Settings]]></string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="rarely">Rarely</string>
    <string name="very_important">Very Important</string>
    <string name="somewhat_important">Somewhat Important</string>
    <string name="not_very_important">Not Very Important</string>
    <string name="not_important">Not Important</string>
    <string name="recycling_and_waste_reduction">Recycling and Waste Reduction</string>
    <string name="energy_conservation">Energy Conservation</string>
    <string name="sustainable_living">Sustainable Living</string>
    <string name="climate_change_awareness">Climate Change Awareness</string>
    <string name="wildlife_conservation">Wildlife Conservation</string>
    <string name="outdoor_activities">Outdoor Activities</string>
    <string name="how_do_you_prefer_to_receive_information_on_nature_and_environmental_topics">How do you prefer to receive information on nature and environmental topics?</string>
    <string name="articles">Articles</string>
    <string name="stories">Stories</string>
    <string name="short_novels">Short Novels</string>
    <string name="verify_email_text">A verification link has been sent to your email address: xyz@gmail.com. Please verify now to sign in to your account.</string>

</resources>