<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_dialog"
    android:orientation="vertical"
    tools:context=".Fragments.MoodFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <View
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_3sdp"
            android:layout_gravity="center"
            android:background="@drawable/view_bg" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/mood_animation" />

        <!-- Mood Selection -->
        <TextView
            android:id="@+id/tvMood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai"
            android:text="How are you feeling today?"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <RadioGroup
            android:id="@+id/rgMood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbHappy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:text="@string/happy"
                android:textSize="@dimen/_11sdp"
                tools:ignore="TextSizeCheck" />

            <RadioButton
                android:id="@+id/rbSad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:text="@string/sad"
                android:textSize="@dimen/_11sdp"
                tools:ignore="TextSizeCheck" />

            <RadioButton
                android:id="@+id/rbAnxious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:text="@string/anxious"
                android:textSize="@dimen/_11sdp"
                tools:ignore="TextSizeCheck" />

            <RadioButton
                android:id="@+id/rbStressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:text="@string/stressed"
                android:textSize="@dimen/_11sdp"
                tools:ignore="TextSizeCheck" />

            <RadioButton
                android:id="@+id/rbCalm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:text="@string/calm"
                android:textSize="@dimen/_11sdp"
                tools:ignore="TextSizeCheck" />

            <RadioButton
                android:id="@+id/rbTired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:text="@string/tired"
                android:textSize="@dimen/_11sdp"
                tools:ignore="TextSizeCheck" />
        </RadioGroup>


        <!-- Save Button -->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:backgroundTint="@color/mainBlueColor"
            android:fontFamily="@font/baloo_bhai"
            android:text="Save Mood"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</ScrollView>